--- a/styles/info_page.css
+++ b/styles/info_page.css
@@ -11,47 +11,114 @@
 
 * {
     font-family: CSPraKas;
+    vertical-align: middle;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: repeat(5, 20%);
     grid-template-rows: 30% 10% 50% 10%;
-    gap: 1% 1%;
-    grid-template-areas: "header header header header header" "search-box search-box search-box search-box add-button" "info-table info-table info-table info-table info-table" ". . page-nav . .";
+    grid-column-gap: 2%;
+    grid-row-gap: 2%;
 }
 
 .header {
-    grid-area: header;
+    grid-area: 1 / 1 / 2 / 6;
 }
 
 .search-box {
-    grid-area: search-box;
+    grid-area: 2 / 1 / 3 / 5;
 }
 
 .add-button {
-    grid-area: add-button;
+    grid-area: 2 / 5 / 3 / 6;
 }
 
 .info-table {
-    grid-area: info-table;
+    padding-top: 2%;
+    grid-area: 3 / 1 / 4 / 6;
 }
 
 .page-nav {
-    grid-area: page-nav;
+    grid-area: 4 / 3 / 5 / 4;
 }
 
 body {
     background-color: #E0E0E0;
 }
 
-input[type=submit] {
-    width: 10%;
+table {
+    width: 91%;
+    border-collapse: collapse;
+    font-size: 12pt;
+}
+
+th {
+    background-color: #9E9E9E;
+    border: 1.5px #EEEEEE solid;
+    padding: 10px;
+    color: white;
+    text-align: left;
+}
+
+td {
+    border: 1.5px #EEEEEE solid;
+    padding: 7.5px;
+    text-align: left;
+}
+
+tr:nth-child(even) {
+    background-color: #FFFFFF;
+}
+
+tr:nth-child(odd) {
+    background-color: #EEEEEE;
+}
+
+tr:hover {
+    background-color: #FFE0B2;
+}
+
+.add-button button {
+    width: auto;
+    height: 100%;
     background-color: #FF9800;
     color: white;
-    padding: 1%;
-    margin: 2%;
+    margin-top: 10%;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-size: 12pt;
+}
+
+input[type=submit] {
+    width: auto;
+    height: 100%;
+    background-color: #FF9800;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 12pt;
+}
+
+input[type=search] {
+    width: 40%;
+    height: 100%;
+    margin: auto;
+    border: 1px #BDBDBD solid;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    padding-left: 4pt;
+    font-size: 12pt;
+}
+
+.search-box select {
+    width: 30%;
+    height: 100%;
+    margin: auto;
+    border: 1px #BDBDBD solid;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    font-size: 12pt;
 }
