--- a/styles/login.css
+++ b/styles/login.css
@@ -11,16 +11,30 @@
 
 * {
     font-family: CSPraKas;
+    font-size: 11pt;
+}
+
+body {
+    display: grid;
+    grid-template-columns: 35% repeat(2, 15%) 35%;
+    grid-template-rows: repeat(4, 25%);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    background-color: #E0E0E0;
 }
 
 .login {
-    height: 30%;
-    width: 32%;
+    grid-area: 2 / 2 / 4 / 4;
     margin: auto;
     border: 1px #BDBDBD solid;
     background-color: #FFFFFF;
     padding: 6%;
     border-radius: 5px;
+}
+
+.login img {
+    width: 90%;
+    padding: 5%;
 }
 
 .login input {
@@ -31,7 +45,7 @@
 }
 
 .login input[type=submit] {
-    width: 100%;
+    width: 95%;
     background-color: #FF9800;
     color: white;
     padding: 4%;
@@ -39,4 +53,5 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-weight: bold;
 }
