--- a/styles/info_page.css
+++ b/styles/info_page.css
@@ -39,8 +39,29 @@
     grid-area: 3 / 1 / 4 / 6;
 }
 
-.page-nav {
-    grid-area: 4 / 3 / 5 / 4;
+
+
+.pagination {
+    grid-area: 4 / 1 / 5 / 6;
+    display: inline-block;
+    font-size: 10pt;
+}
+
+.pagination a {
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.pagination a.active {
+    background-color: #FF9800;
+    color: white;
+    border-radius: 10px;
+}
+
+.pagination a:hover:not(.active) {
+    background-color: #FFE0B2;
+    border-radius: 10px;
 }
 
 body {
@@ -54,8 +75,9 @@ table {
 }
 
 th {
-    background-color: #9E9E9E;
+    background-color: #BDBDBD;
     border: 1.5px #EEEEEE solid;
+    font-weight: bold;
     padding: 10px;
     color: white;
     text-align: left;
