--- a/styles/side_nav.css
+++ b/styles/side_nav.css
@@ -56,7 +56,6 @@ input[type=submit] {
     cursor: pointer;
 }
 
-
 /* Fixed sidenav, full height */
 
 .sidenav {
@@ -76,7 +75,7 @@ input[type=submit] {
 .sidenav a, .dropdown-btn {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 14pt;
     color: #818181;
     display: block;
     border: none;
@@ -124,4 +123,64 @@ input[type=submit] {
 .fa-caret-down {
     float: right;
     padding-right: 8px;
+}
+
+/* Dropup Button */
+
+.dropbtn {
+    background-color: #2196f3;
+    color: white;
+    width: 200px;
+    padding: 16px;
+    font-size: 12pt;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropup content */
+
+.dropup {
+    bottom: 0;
+    position: absolute;
+    display: inline-block;
+}
+
+/* Dropup content (Hidden by Default) */
+
+.dropup-content {
+    display: none;
+    position: absolute;
+    bottom: 50px;
+    background-color: #e3f2fd;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropup */
+
+.dropup-content a {
+    color: black;
+    padding: 12px 16px;
+    font-size: 14pt;
+    text-decoration: none;
+    display: block;
+    width: inherit;
+}
+
+/* Change color of dropup links on hover */
+
+.dropup-content a:hover {
+    background-color: #64b5f6;
+}
+
+/* Show the dropup menu on hover */
+
+.dropup:hover .dropup-content {
+    display: block;
+}
+
+/* Change the background color of the dropup button when the dropup content is shown */
+
+.dropup:hover .dropbtn {
+    background-color: #2196f3;
 }
