--- a/styles/side_nav.css
+++ b/styles/side_nav.css
@@ -56,9 +56,9 @@ input[type=submit] {
     cursor: pointer;
 }
 
-/* Fixed sidenav, full height */
+/* Fixed leftsidenav, full height */
 
-.sidenav {
+.leftsidenav {
     height: 100%;
     width: 200px;
     position: fixed;
@@ -70,9 +70,9 @@ input[type=submit] {
     /* padding-top: 20px; */
 }
 
-/* Style the sidenav links and the dropdown button */
+/* Style the leftsidenav links and the dropdown button */
 
-.sidenav a, .dropdown-btn {
+.leftsidenav a, .dropdown-btn {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 14pt;
@@ -88,7 +88,7 @@ input[type=submit] {
 
 /* On mouse-over */
 
-.sidenav a:hover, .dropdown-btn:hover {
+.leftsidenav a:hover, .dropdown-btn:hover {
     background-color: #FF9800;
     color: white;
 }
@@ -97,7 +97,7 @@ input[type=submit] {
 
 .main {
     margin-left: 200px;
-    /* Same as the width of the sidenav */
+    /* Same as the width of the leftsidenav */
     font-size: 20px;
     /* Increased text to enable scrolling */
     padding: 0px 10px;
@@ -183,4 +183,84 @@ input[type=submit] {
 
 .dropup:hover .dropbtn {
     background-color: #2196f3;
+}
+
+.rightsidenav {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #F1F1F1;
+    overflow-x: hidden;
+    padding: 1% 2%;
+    padding-top: 10px;
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.1s;
+    border-radius: 5px;
+    padding: 2% 5%;
+    background-color: #FFFFFF;
+    display: grid;
+    grid-template-columns: 50% 49%;
+    grid-template-rows: 15% 80%;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+}
+
+/* On mouse-over, add a deeper shadow */
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.jobID {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.jobDetail {
+    grid-area: 2 / 1 / 3 / 3;
+    font-size: 11pt;
+}
+
+.groupbtn {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.checkbtn {
+    background-color: #009900;
+    border: none;
+    color: white;
+    width: 25px;
+    height: 25px;
+    padding: 1%;
+    text-align: center;
+    border-radius: 100%;
+}
+
+.crossbtn {
+    background-color: #F10000;
+    border: none;
+    color: white;
+    width: 25px;
+    height: 25px;
+    padding: 1%;
+    text-align: center;
+    border-radius: 100%;
+}
+
+.editbtn {
+    background-color: #FF9800;
+    border: none;
+    color: white;
+    width: auto;
+    padding: 5%;
+    font-size: 10pt;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 10%;
 }
