--- a/styles/info_page.css
+++ b/styles/info_page.css
@@ -16,7 +16,7 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(5, 20%);
+    grid-template-columns: repeat(5, 1fr) 250px;
     grid-template-rows: 30% 10% 50% 10%;
     grid-column-gap: 2%;
     grid-row-gap: 2%;
@@ -38,8 +38,6 @@
     padding-top: 2%;
     grid-area: 3 / 1 / 4 / 6;
 }
-
-
 
 .pagination {
     grid-area: 4 / 1 / 5 / 6;
@@ -69,9 +67,9 @@ body {
 }
 
 table {
-    width: 91%;
+    width: 97%;
     border-collapse: collapse;
-    font-size: 12pt;
+    font-size: 10pt;
 }
 
 th {
@@ -107,6 +105,7 @@ tr:hover {
     background-color: #FF9800;
     color: white;
     margin-top: 10%;
+    padding: 0 5%;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -118,6 +117,7 @@ input[type=submit] {
     height: 100%;
     background-color: #FF9800;
     color: white;
+    padding: 0 5%;
     border: none;
     border-radius: 4px;
     cursor: pointer;
