--- a/styles/info_page.css
+++ b/styles/info_page.css
@@ -17,9 +17,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr) 250px;
-    grid-template-rows: 30% 10% 50% 10%;
-    grid-column-gap: 2%;
-    grid-row-gap: 2%;
+    grid-template-rows: 2fr 1fr;
 }
 
 .header {
@@ -27,22 +25,25 @@
 }
 
 .search-box {
-    grid-area: 2 / 1 / 3 / 5;
+    grid-area: 2 / 1 / 3 / 4;
+    height: 80%;
 }
 
 .add-button {
-    grid-area: 2 / 5 / 3 / 6;
+    grid-area: 2 / 4 / 3 / 6;
+    margin-left: 50%;
+    height: 80%;
 }
 
 .info-table {
-    padding-top: 2%;
-    grid-area: 3 / 1 / 4 / 6;
+    padding-top: 1%;
+    width: 74%;
 }
 
 .pagination {
-    grid-area: 4 / 1 / 5 / 6;
     display: inline-block;
     font-size: 10pt;
+    padding: 2% 25%;
 }
 
 .pagination a {
@@ -69,11 +70,11 @@ body {
 table {
     width: 97%;
     border-collapse: collapse;
-    font-size: 10pt;
+    font-size: 11pt;
 }
 
 th {
-    background-color: #BDBDBD;
+    background-color: #ACACAC;
     border: 1.5px #EEEEEE solid;
     font-weight: bold;
     padding: 10px;
