--- a/styles/side_nav.css
+++ b/styles/side_nav.css
@@ -116,18 +116,18 @@ body {
 
 /* Dropup Button */
 
-.dropbtn {
+.profile-btn {
     background-color: #2196f3;
     color: white;
     width: 200px;
     padding: 16px;
-    font-size: 12pt;
+    font-size: 8pt;
     border: none;
 }
 
 /* The container <div> - needed to position the dropup content */
 
-.dropup {
+.profile {
     bottom: 0;
     position: absolute;
     display: inline-block;
@@ -135,7 +135,7 @@ body {
 
 /* Dropup content (Hidden by Default) */
 
-.dropup-content {
+.profile-logout {
     display: none;
     position: absolute;
     bottom: 50px;
@@ -147,10 +147,10 @@ body {
 
 /* Links inside the dropup */
 
-.dropup-content a {
+.profile-logout a {
     color: black;
     padding: 12px 16px;
-    font-size: 14pt;
+    font-size: 8pt;
     text-decoration: none;
     display: block;
     width: inherit;
@@ -158,19 +158,19 @@ body {
 
 /* Change color of dropup links on hover */
 
-.dropup-content a:hover {
+.profile-logout a:hover {
     background-color: #64b5f6;
 }
 
 /* Show the dropup menu on hover */
 
-.dropup:hover .dropup-content {
+.dropup:hover .profile-logout {
     display: block;
 }
 
 /* Change the background color of the dropup button when the dropup content is shown */
 
-.dropup:hover .dropbtn {
+.dropup:hover .profile-btn {
     background-color: #2196f3;
 }
 
