--- a/styles/side_nav.css
+++ b/styles/side_nav.css
@@ -116,13 +116,19 @@ body {
 
 /* Dropup Button */
 
+span {
+    font-size: 12pt;
+    font-weight: bold;
+}
+
 .profile-btn {
     background-color: #2196f3;
     color: white;
     width: 200px;
     padding: 16px;
-    font-size: 8pt;
+    font-size: 10pt;
     border: none;
+    text-align: left;
 }
 
 /* The container <div> - needed to position the dropup content */
