--- a/styles/form.css
+++ b/styles/form.css
@@ -61,6 +61,18 @@ input[type=submit] {
     padding: 5px 0;
 }
 
+.showRef-btn {
+    background-color: #FF9800;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 12pt;
+    width: 130px;
+    height: auto;
+    padding: 5px 0;
+}
+
 .modal {
     display: none;
     /* Hidden by default */
@@ -86,11 +98,12 @@ input[type=submit] {
 
 .modal-content {
     background-color: #fefefe;
+    border-radius: 5px;
     margin: 15% auto;
     /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 30%;
     /* Could be more or less, depending on screen size */
 }
 
@@ -124,13 +137,31 @@ table {
 }
 
 .import-table {
+    background-color: #FFFFFF;
     border-collapse: collapse;
     font-size: 11pt;
-    border: 2px #bdbdbd solid;
+    border: 1px #000000 solid;
 }
 
 .import-table th, .import-table td {
-    border: 2px #9e9e9e solid;
+    background-color: #eeeeee;
+    border: 1px #000000 solid;
+}
+.grand-total {
+    text-align: end;
+}
+.ref-id {
+    width: 45%;
+    border-radius: 5px;
+    background-color: #cacfd2;
+    padding: 5px 20px;
+}
+
+.installing-type {
+    width: 45%;
+    border-radius: 5px;
+    background-color: #cacfd2;
+    padding: 5px 20px;
 }
 
 .purchaseInfo {
