fix missing active class for dropdown button

--- a/styles/side_nav.css
+++ b/styles/side_nav.css
@@ -95,7 +95,7 @@ body {
 
 /* Add an active class to the active dropdown button */
 
-.dropdown-btn:active {
+.dropdown-btn.active {
     background-color: #FF9800;
     color: white;
 }
