--- a/styles/form.css
+++ b/styles/form.css
@@ -350,7 +350,7 @@ table {
     width: 100%;
     height: 100%;
     margin: auto;
-    background-color: #FFFFFF;
+    background-color: #FFFFFF !important;
     font-size: 12pt;
 }
 
@@ -369,6 +369,7 @@ table {
 .zipcode-field {
     width: 100px;
     font-size: 12pt;
+    background-color: #FFFFFF !important;
 }
 
 .qty {
