Create event on install type radio button

--- a/styles/form.css
+++ b/styles/form.css
@@ -191,7 +191,7 @@ table {
     text-align: end;
 }
 
-.ref-id {
+.ref-job {
     width: 60%;
     border-radius: 5px;
     background-color: #cacfd2;
