Try implement cross MVC event emiting

--- a/views/info_page.html
+++ b/views/info_page.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Seutrong Service</title>
-    <link rel="stylesheet" href="styles/info_page.css">
+    <link rel="stylesheet" href="../src/styles/info_page.css">
 </head>
 
 <body>
