--- a/views/forms/installation_ac_form.html
+++ b/views/forms/installation_ac_form.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Seutrong Service</title>
-    <link rel="stylesheet" href="styles/form.css">
+    <link rel="stylesheet" href="../src/styles/form.css">
 </head>
 
 <body>
