try implement get&set staff information

--- a/views/forms/staff_form.html
+++ b/views/forms/staff_form.html
@@ -29,13 +29,13 @@
                         </td> -->
                     </tr>
                     <tr>
-                        <td>ชื่อ</td>
+                        <td>คำนำหน้า</td>
+                        <td>
+                            <input type="text" id="staffTitle" name="staffTitle">
+                        </td>
+                        <td>ชื่อ - นามสกุล</td>
                         <td>
                             <input type="text" id="staffName" name="staffName">
-                        </td>
-                        <td>นามสกุล</td>
-                        <td>
-                            <input type="text" id="staffLastName" name="staffLastName">
                         </td>
                     </tr>
                     <tr>
@@ -88,25 +88,25 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="radio" id="staffPosition" name="staffPosition">
+                            <input type="radio" id="staffAdmin" name="staffPosition">
                             <label for="staffPosition">เสมียน</label>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="radio" id="staffPosition" name="staffPosition">
+                            <input type="radio" id="staffSaleperson" name="staffPosition">
                             <label for="staffPosition">พนักงานขาย</label>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="radio" id="staffPosition" name="staffPosition">
+                            <input type="radio" id="staffDriver" name="staffPosition">
                             <label for="staffPosition">พนักงานจัดส่ง</label>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="radio" id="staffPosition" name="staffPosition">
+                            <input type="radio" id="staffTechnician" name="staffPosition">
                             <label for="staffPosition">ช่าง</label>
                         </td>
                     </tr>
